--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,16 @@
 body {
     text-align: center;
+    position: relative;
+}
+#modal-win {
+	display: none;
+	position: absolute;
+	top: 25%;
+	left: 50%;
+	margin-left: -150px;
+	width: 300px;
+	height: 150px;
+	border: 1px solid grey;
+	border-radius: 5px;
+	background-color: #99ffff;
 }
