--- a/css/style.css
+++ b/css/style.css
@@ -13,4 +13,8 @@ body {
 	border: 1px solid grey;
 	border-radius: 5px;
 	background-color: #99ffff;
+	color: #6699ff;
+	line-height: 1.5;
+	text-transform: uppercase;
+	padding-top: 30px;
 }
